@@ -1,8 +1,10 @@
 pbuilder (0.171) UNRELEASED; urgency=low
 
   * add example configuration file for ccache.
+  * Bug fix: "$HOME/.pbuilderrc example for use in using multiple pbuilder
+    setups", thanks to Andres Mejia (Closes: #432277).
 
- -- Junichi Uekawa <dancer@debian.org>  Sun, 22 Jul 2007 13:15:57 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Fri, 27 Jul 2007 07:31:45 +0900
 
 pbuilder (0.170) unstable; urgency=low
 
