@@ -1,3 +1,8 @@
+2007-07-27  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: add document on example usage of
+	pbuilderrc with DIST env-var.
+
 2007-07-22  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml: refer to example file.
